tests/uncompilable_examples/input_not_enum.stderr
error: proc-macro derive panicked
 --> $DIR/input_not_enum.rs:3:10
  |
3 | #[derive(VariantAccess)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: Can only derive VariantAccess for enums.
