tests/uncompilable_examples/input_not_enum.rs
use variant_access_derive::*;

#[derive(VariantAccess)]
struct Enum {
    f1: bool,
    f2: f64
}

fn main() {

}